# exercise-rx-ai-apigateway

./: README.md  USAGE_GUIDE.md  main.py  mock_services.py  pyproject.toml
app/: main.py
app/core/: auth.py  config.py
app/middlewares/: auth.py  proxy.py  rate_limit.py
app/schemas/: auth.py
app/utils/: logger.py
